--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Galeria proyectos inmobiliarios</title>
+    <style>
+        .logo-header {
+            width: 125px;
+        }
+        .menu-principal {
+            margin-left: 50px;
+        }
+    </style>
   </head>
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-info">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">INMO ALPHA</a>
+              <img class="logo-header" src="recursos\img\logo_inmo.png" alt="">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse menu-principal" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
