--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-info">
             <div class="container-fluid">
-              <img class="logo-header" src="recursos\img\logo_inmo.png" alt="">
+              <img class="logo-header" src="./recursos/img/logo_inmo.png" alt="">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
